<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@drawable/back">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="QALQALAH"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="45dp"
            android:gravity="center"/>
    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ketqlq"/>
    <ImageView
            android:src="@drawable/idhar"
            android:layout_marginTop="10dp"
            android:layout_height="48dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"/>
    <TextView
            android:layout_marginTop="29dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Macam-macam Qalqalah"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textAlignment="center"
            />
    <TextView
            android:layout_marginTop="29dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Qalqalah Sughra"
            android:textSize="20dp"
            />
    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qlqs"
            />
        <ImageView
                android:src="@drawable/qls"
                android:layout_marginTop="10dp"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
    <TextView
            android:layout_marginTop="29dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Qalqalah Kubra"
            android:textSize="20dp"
            />
    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qlqk"
            />
        <ImageView
                android:src="@drawable/qlk"
                android:layout_marginTop="10dp"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>