<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@drawable/back">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LAFADZ ALLAH"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="45dp"
            android:gravity="center"/>
    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lfzallah"/>
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="1. Lafadz Allah Tafkhim (Tebal)"/>
    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lfzallah2"/>
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CONTOH :"
            android:fontFamily="monospace"
            android:textStyle="bold"/>
        <ImageView
                android:src="@drawable/ljtfk"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
        <ImageView
                android:src="@drawable/ljtfk2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="2. Lafadz Allah Tarqiq (Tipis)"/>
    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lfzallah3"/>
    <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CONTOH :"
            android:fontFamily="monospace"
            android:textStyle="bold"/>
        <ImageView
                android:src="@drawable/ljtrq"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>